--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"dev": "nodemon --exec npx babel-node ./src/app.js",
 		"clean": "rimraf dist",
 		"build": "babel ./src --out-dir dist",
-		"prod": "npm-run-all clean build",
+		"prod": "npm-run-all clean build start",
 		"buildAndRun": "babel ./src --out-dir dist & node ./dist/app"
 	},
 	"author": "Brahim AFASSY",
